rgw: fix deadlock on lru evicting

fh_lru.insert may evict RGWFileHandle and the mutex
for TreeX::Partition will be acquired a second time,
so we should use recursive_mutex instead. And the
insert_commit_data in struct Latch becomes invalid
after evicting.

Fixes: http://tracker.ceph.com/issues/22736

Signed-off-by: Yao Zongyou <yaozongyou@vip.qq.com>